package com.expedia.www.eginsurance.wilp.schedulingService.dto;

import lombok.Data;

@Data
public class Patient {
    private String patientId;
    private String name;
    private String contactInfo;
}
